--- a/3장/Basic_김현수_3주차_1.ipynb
+++ b/3장/Basic_김현수_3주차_1.ipynb
@@ -15,23 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'sklearn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mbase\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BaseEstimator\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mMyDummyClassifier\u001b[39;00m(BaseEstimator):\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;66;03m# fit() 메서드는 아무것도 학습하지 않음.\u001b[39;00m\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfit\u001b[39m(\u001b[38;5;28mself\u001b[39m, X, y\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.base import BaseEstimator\n",
+    "import numpy as np\n",
     "\n",
     "class MyDummyClassifier(BaseEstimator):\n",
     "    # fit() 메서드는 아무것도 학습하지 않음.\n",
@@ -39,13 +28,85 @@
     "        pass\n",
     "    # predict() 메서드는 단순히 Sex 피처가 1이면 0, 그렇지 않으면 1로 예측함\n",
     "    def predict(self, X):\n",
-    "        pred = np.zeors((X.shape[0], 1))\n",
+    "        pred = np.zeros((X.shape[0], 1))\n",
     "        for i in range(X.shape[0]):\n",
     "            if X['Sex'].iloc[i] == 1:\n",
     "                pred[i] = 0\n",
     "            else:\n",
     "                pred[i] = 1\n",
     "        return pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "# Null 처리 함수\n",
+    "def fillna(df):\n",
+    "    df['Age'].fillna(df['Age'].mean(), inplace=True)\n",
+    "    df['Cabin'].fillna('N', inplace=True)\n",
+    "    df['Embarked'].fillna('N', inplace=True)\n",
+    "    df['Fare'].fillna(0, inplace=True)\n",
+    "    return df\n",
+    "\n",
+    "# 머신러닝 알고리즘에 불필요한 피처 제거\n",
+    "def drop_features(df):\n",
+    "    df.drop(['PassengerId', 'Name', 'Ticket'], axis=1, inplace=True)\n",
+    "    return df\n",
+    "\n",
+    "# 레이블 인코딩 수행.\n",
+    "def format_features(df):\n",
+    "    df['Cabin'] = df['Cabin'].str[:1]\n",
+    "    features = ['Cabin', 'Sex', 'Embarked']\n",
+    "    for feature in features:\n",
+    "        le = LabelEncoder()\n",
+    "        le = le.fit(df[feature])\n",
+    "        df[feature] = le.transform(df[feature])\n",
+    "    return df\n",
+    "\n",
+    "# 앞에서 설정한 데이터 전처리 함수 호출\n",
+    "def transform_features(df):\n",
+    "    df = fillna(df)\n",
+    "    df = drop_features(df)\n",
+    "    df = format_features(df)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dummy Classifier의 정확도는: 0.7877\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# 원본 데이터를 재로딩, 데이터 가공, 학습 데이터/테스트 데이터 분할\n",
+    "titanic_df = pd.read_csv('train.csv')\n",
+    "y_titanic_df = titanic_df['Survived']\n",
+    "X_titanic_df = titanic_df.drop('Survived', axis=1)\n",
+    "X_titanic_df = transform_features(X_titanic_df)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_titanic_df, y_titanic_df, test_size=0.2, random_state=0)\n",
+    "\n",
+    "# 위에서 생성한 Dummy Classifier를 이용해 학습/예측/평가 수행.\n",
+    "myclf = MyDummyClassifier()\n",
+    "myclf.fit(X_train, y_train)\n",
+    "\n",
+    "mypredictions = myclf.predict(X_test)\n",
+    "print('Dummy Classifier의 정확도는: {0:.4f}'.format(accuracy_score(y_test, mypredictions)))"
    ]
   },
   {
@@ -72,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
